--- a/src/content/blog/LifeLoggerz-Q-and-A.mdx
+++ b/src/content/blog/LifeLoggerz-Q-and-A.mdx
@@ -1,6 +1,7 @@
 ---
 title: "LifeLoggerz Q&A — Tracking Life, One Cell at a Time"
 description: "Common questions about why I track my life, how my systems work, and how you can adapt them for your own workflow."
+pubDate: "2025-10-09"
 draft: false
 ---
 
