Update hero image path in AHK blog post

--- a/src/content/blog/ahk.mdx
+++ b/src/content/blog/ahk.mdx
@@ -3,7 +3,7 @@ title: "Building a One-Handed Productivity System with AutoHotkey"
 pubDate: "2026-02-05"
 description: "How I built a personal productivity operating system using just 16 AutoHotkey hotstrings: layouts, teleporters, smart phrases, and AI prompt menus."
 tags: ["LifeLoggerz", "AutoHotkey", "Automation", "Productivity", "Workflows", "AI"]
-heroImage: "/images_webp/ahkpost/ahk-hero.webp"
+heroImage: "/images_webp/ahk.webp"
 draft: false
 ---
 
